# tmcl

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
represent/: dimensionality_reduction.py  knn.py  neural_collapse.py  power_law.py  rankme.py  utils.py
slurm/: submit_cifar100_s5.py  submit_imagenet_s5.py  utils.py
tmcl/: config_knn.py  config_linear.py  config_tmcl.py  config_tmcl_dali.py  data.py  data_setups.py  eval_dali.py  hints.py  main_knn.py  main_linear.py  main_linear_dali.py  main_tmcl.py  main_tmcl_dali.py  phase.py  utils.py
tmcl/datasets/: aircraft.py  cu_birds.py  dali_imagenet.py  dataset.py  eurosat.py  hints.py  kornia_ssl.py  kornia_supervised.py  labels.py  relabel_dataset.py  traffic_sign.py  transforms.py  vgg_flower.py
tmcl/nn/: __init__.py  convit.py  heads.py  resnet_cifar.py  vit.py
tmcl/nn/ddp/: __init__.py  normalize.py  utils.py
tmcl/nn/losses/: __init__.py  barlow.py  contrastive_opl.py  mv_barlow.py  simclr.py  supcon.py
tmcl/nn/modulations/: __init__.py  build.py  task_modulations.py
tmcl/optim/: lars.py  warmup_cosine.py
